--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "components"
   ],
     "scripts": {
+ "docs:build": "vuepress build docs --temp docs/.temp",
+    "docs:dev": "vuepress dev docs --temp docs/.temp",
       "dev": "vuepress dev",
       "build": "vuepress build"
     },
