--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "components"
   ],
   "scripts": {
+    "dev": "vuepress dev",
+    "build": "vuepress build"
     "docs:build": "vuepress build docs --temp docs/.temp",
     "docs:dev": "vuepress dev docs --temp docs/.temp",
     "build": "vuepress build docs",
