--- a/package.json
+++ b/package.json
@@ -27,13 +27,7 @@
   ],
   "scripts": {
     "dev": "vuepress dev",
-    "build": "vuepress build",
-    "docs:build": "vuepress build docs --temp docs/.temp",
-    "docs:dev": "vuepress dev docs --temp docs/.temp",
-    "lint": "eslint . --ext .js,.vue",
-    "prepublishOnly": "npm run test && npm run docs:build && conventional-changelog -p angular -r 2 -i CHANGELOG.md -s",
-    "start": "yarn dev",
-    "test": "jest"
+    "build": "vuepress build"
     } 
 ],
 "husky": {
